WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129310
[EME][Mac] Fix a few issues in CDMSessionMediaSourceAVFObjC.
https://bugs.webkit.org/show_bug.cgi?id=129310
Summary
[EME][Mac] Fix a few issues in CDMSessionMediaSourceAVFObjC.
Jer Noble
Reported
2014-02-25 08:28:04 PST
[EME][Mac] Fix a few issues in CDMSessionMediaSourceAVFObjC.
Attachments
Patch
(4.07 KB, patch)
2014-02-25 08:33 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-02-25 08:33:20 PST
Created
attachment 225148
[details]
Patch
Jer Noble
Comment 2
2014-02-25 10:18:48 PST
Committed
r164656
: <
http://trac.webkit.org/changeset/164656
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug